--- a/github-deployer/src/main/resources/templates/index.html
+++ b/github-deployer/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
 <body>
 	<h1>Apps</h1>
 	<div class="container">
+		Click to <a href="/login">re-authenticate</a>
 		<table class="table table-bordered table-striped">
 			<thead>
 				<tr>
