--- a/github-deployer/src/main/resources/templates/login.html
+++ b/github-deployer/src/main/resources/templates/login.html
@@ -24,8 +24,8 @@
 			<div class="form-group">
 				<label for="password">Password:</label> <input type="password"
 					class="form-control" id="password" name="password"/>
-			</div>
-			<input type="hidden" name="_csrf" value="{{_csrf}}"/>
+			</div>{{#_csrf}}
+			<input type="hidden" name="{{parameterName}}" value="{{token}}"/>{{/_csrf}}
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 	</div>
