Refactor security to not use form login

--- a/github-deployer/src/main/resources/templates/index.html
+++ b/github-deployer/src/main/resources/templates/index.html
@@ -16,13 +16,13 @@
 <body>
 	<h1>Apps</h1>
 	<div class="container">
-		Click to <a href="/login">re-authenticate</a>
 		<table class="table table-bordered table-striped">
 			<thead>
 				<tr>
 					<th>Name</th>
 					<th>Instances</th>
 					<th>Resource</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -41,6 +41,7 @@
 				{{/apps}}
 			</tbody>
 		</table>
+		<br /><a href="/login" class="btn btn-primary">Authenticate</a>
 	</div>
 </body>
 </html>
